Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24448

mariabackup: storage/innobase/srv/srv0start.cc:1582: dberr_t srv_start(bool): Assertion `!buf_pool.any_io_pending()' failed.

    XMLWordPrintable

Details

    Description

      mariabackup.apply-log-only-incr 'innodb' w19 [ 2 pass ]  65328
      mariabackup.apply-log-only-incr 'innodb' w8 [ 2 fail ]
              Test ended at 2020-12-17 19:37:54
       
      CURRENT_TEST: mariabackup.apply-log-only-incr
      ...
      /data/Server_bin/10.6C_debug/bin/mariabackup based on MariaDB server 10.6.0-MariaDB Linux (x86_64)
      [00] 2020-12-17 19:36:51 incremental backup from 62952 is enabled.
      [00] 2020-12-17 19:36:51 cd to /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup/
      [00] 2020-12-17 19:36:56 This target seems to be already prepared.
      [00] 2020-12-17 19:36:57 mariabackup: using the following InnoDB configuration for recovery:
      [00] 2020-12-17 19:36:57 innodb_data_home_dir = .
      [00] 2020-12-17 19:36:57 innodb_data_file_path = ibdata1:12M:autoextend
      [00] 2020-12-17 19:36:57 innodb_log_group_home_dir = /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1/
      [00] 2020-12-17 19:36:57 InnoDB: Using Linux native AIO
      [00] 2020-12-17 19:36:57 mariabackup: Generating a list of tablespaces
      [00] 2020-12-17 19:36:57 page size for /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//ibdata1.delta is 16384 bytes
      [00] 2020-12-17 19:36:57 Applying /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//ibdata1.delta to ./ibdata1...
      [00] 2020-12-17 19:36:57 page size for /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//test/t.ibd.delta is 16384 bytes
      [00] 2020-12-17 19:36:57 Applying /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//test/t.ibd.delta to ./test/t.ibd...
      [00] 2020-12-17 19:36:57 page size for /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//mysql/transaction_registry.ibd.delta is 16384 bytes
      [00] 2020-12-17 19:36:57 Applying /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//mysql/transaction_registry.ibd.delta to ./mysql/transaction_registry.ibd...
      [00] 2020-12-17 19:36:57 page size for /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//mysql/innodb_table_stats.ibd.delta is 16384 bytes
      [00] 2020-12-17 19:36:57 Applying /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//mysql/innodb_table_stats.ibd.delta to ./mysql/innodb_table_stats.ibd...
      [00] 2020-12-17 19:36:57 page size for /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//mysql/innodb_index_stats.ibd.delta is 16384 bytes
      [00] 2020-12-17 19:36:57 Applying /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1//mysql/innodb_index_stats.ibd.delta to ./mysql/innodb_index_stats.ibd...
      [00] 2020-12-17 19:36:57 mariabackup: using the following InnoDB configuration for recovery:
      [00] 2020-12-17 19:36:57 innodb_data_home_dir = .
      [00] 2020-12-17 19:36:57 innodb_data_file_path = ibdata1:12M:autoextend
      [00] 2020-12-17 19:36:57 innodb_log_group_home_dir = /data/Server_bin/10.6C_debug/mysql-test/var/8/tmp/backup_inc1/
      [00] 2020-12-17 19:36:57 InnoDB: Using Linux native AIO
      [00] 2020-12-17 19:36:57 Starting InnoDB instance for recovery.
      [00] 2020-12-17 19:36:57 mariabackup: Using 104857600 bytes for buffer pool (set by --use-memory parameter)
      2020-12-17 19:36:57 0 [Note] InnoDB: !!!!!!!! UNIV_DEBUG switched on !!!!!!!!!
      2020-12-17 19:36:57 0 [Note] InnoDB: Compressed tables use zlib 1.2.11
      2020-12-17 19:36:57 0 [Note] InnoDB: Number of pools: 1
      2020-12-17 19:36:57 0 [Note] InnoDB: Using crc32 + pclmulqdq instructions
      2020-12-17 19:36:57 0 [Warning] InnoDB: Linux Native AIO disabled.
      2020-12-17 19:36:57 0 [Note] InnoDB: Initializing buffer pool, total size = 104857600, chunk size = 104857600
      2020-12-17 19:36:57 0 [Note] InnoDB: Completed initialization of buffer pool
      2020-12-17 19:36:57 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=62995,67272
      FILE_CHECKPOINT(62995) read at 67272
      FILE_CHECKPOINT(62995) reread at 67272
      2020-12-17 19:36:57 0 [Note] InnoDB: Starting final batch to recover 4 pages from redo log.
      2020-12-17 19:36:57 0 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
      2020-12-17 19:36:57 0 [Note] InnoDB: Applying log to page [page id: space=0, page number=312]
      2020-12-17 19:36:57 0 [Note] InnoDB: Applying log to page [page id: space=0, page number=313]
      2020-12-17 19:36:57 0 [Note] InnoDB: Applying log to page [page id: space=6, page number=3]
      2020-12-17 19:36:59 0 [Note] InnoDB: Applying log to page [page id: space=0, page number=51]
      mariabackup: /Server/10.6C/storage/innobase/srv/srv0start.cc:1582: dberr_t srv_start(bool): Assertion `!buf_pool.any_io_pending()' failed.
       
      #11 <signal handler called>
      #12 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #13 0x0000319e1b0b9859 in __GI_abort () at abort.c:79
      #14 0x0000319e1b0b9729 in __assert_fail_base (fmt=0x319e1b24f588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x564864f8dc66 "!buf_pool.any_io_pending()", file=0x564864f8dbc0 "/Server/10.6C/storage/innobase/srv/srv0start.cc", line=1582, function=<optimized out>) at assert.c:92
      #15 0x0000319e1b0caf36 in __GI___assert_fail (assertion=0x564864f8dc66 "!buf_pool.any_io_pending()", file=0x564864f8dbc0 "/Server/10.6C/storage/innobase/srv/srv0start.cc", line=1582, function=0x564864f8e7a9 "dberr_t srv_start(bool)") at assert.c:101
      #16 0x000056486481d5d6 in srv_start (create_new_db=false) at /Server/10.6C/storage/innobase/srv/srv0start.cc:1582
      #17 0x0000564863ba1544 in innodb_init () at /Server/10.6C/extra/mariabackup/xtrabackup.cc:2175
      #18 0x0000564863bac6be in xtrabackup_prepare_func (argv=0x51906fb7d308) at /Server/10.6C/extra/mariabackup/xtrabackup.cc:5739
      #19 0x0000564863baf094 in main_low (argv=0x51906fb7d308) at /Server/10.6C/extra/mariabackup/xtrabackup.cc:6643
      #20 0x0000564863bae8a7 in main (argc=5, argv=0x7ffe969c70e8) at /Server/10.6C/extra/mariabackup/xtrabackup.cc:6435
       
      origin/bb-10.6-MDEV-24426, origin/HEAD, origin/10.6, 10.6 c36a2a0d1c03900796dc35c01a745bec8b1b54e2 2020-12-17T14:56:08+02:00
      
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              mleich Matthias Leich
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 7h
                  1d 7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.